--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "capstone",
   "version": "1.0.0",
   "description": "------",
-  "main": ".eslintrc.js",
+  "main": "src/index.js",
   "scripts": {
     "start": "webpack-dev-server --mode development --open",
     "build": "webpack --mode production",
