--- a/package.json
+++ b/package.json
@@ -18,17 +18,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@emotion/react": "^11.11.0",
-    "@emotion/styled": "^11.11.0",
-    "@fontsource/roboto": "^4.5.8",
-    "@mui/material": "^5.13.0",
     "@reduxjs/toolkit": "^1.9.5",
+    "antd": "^5.4.7",
     "react": "^16.14.0",
     "react-dom": "^16.14.0",
     "react-redux": "^8.0.5",
     "redux-saga": "^1.2.3"
   },
   "devDependencies": {
+    "@types/antd": "^1.0.0",
     "@types/react": "^16.9.56",
     "@types/react-dom": "^16.9.9",
     "@typescript-eslint/eslint-plugin": "^5.59.5",
