--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
       "git add"
     ]
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "author": "",
   "license": "ISC",
   "dependencies": {
