--- a/package.json
+++ b/package.json
@@ -23,17 +23,18 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@emotion/react": "^11.11.0",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.13.0",
     "@reduxjs/toolkit": "^1.9.5",
-    "antd": "^5.4.7",
-    "react": "^16.14.0",
-    "react-dom": "^16.14.0",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-redux": "^8.0.5",
     "redux-saga": "^1.2.3"
   },
   "devDependencies": {
-    "@types/antd": "^1.0.0",
-    "@types/react": "^16.14.0",
-    "@types/react-dom": "^16.14.0",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
     "@typescript-eslint/eslint-plugin": "^5.59.5",
     "@typescript-eslint/parser": "^5.59.5",
     "css-loader": "^6.7.3",
