--- a/package.json
+++ b/package.json
@@ -23,6 +23,22 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@ckeditor/ckeditor5-autoformat": "^38.0.0",
+    "@ckeditor/ckeditor5-basic-styles": "^38.0.0",
+    "@ckeditor/ckeditor5-build-decoupled-document": "^38.0.1",
+    "@ckeditor/ckeditor5-cloud-services": "^38.0.0",
+    "@ckeditor/ckeditor5-dev-translations": "^37.0.1",
+    "@ckeditor/ckeditor5-dev-utils": "^37.0.1",
+    "@ckeditor/ckeditor5-editor-classic": "^38.0.0",
+    "@ckeditor/ckeditor5-essentials": "^38.0.0",
+    "@ckeditor/ckeditor5-find-and-replace": "^38.0.1",
+    "@ckeditor/ckeditor5-heading": "^38.0.0",
+    "@ckeditor/ckeditor5-html-support": "^38.0.1",
+    "@ckeditor/ckeditor5-import-word": "^38.0.0",
+    "@ckeditor/ckeditor5-link": "^38.0.0",
+    "@ckeditor/ckeditor5-list": "^38.0.0",
+    "@ckeditor/ckeditor5-react": "^6.0.0",
+    "@ckeditor/ckeditor5-theme-lark": "^38.0.1",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.13.0",
@@ -52,6 +68,7 @@
     "prettier": "^2.8.8",
     "source-map-loader": "^4.0.1",
     "style-loader": "^3.3.2",
+    "svg-inline-loader": "^0.8.2",
     "ts-loader": "^9.4.2",
     "typescript": "^5.0.4",
     "webpack": "^5.82.1",
