--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,8 +3,8 @@
     "outDir": "./dist",
     "sourceMap": true,
     "noImplicitAny": true,
-    "module": "es6",
-    "target": "es5",
+    "module": "ES6",
+    "target": "ES6",
     "jsx": "react",
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
