--- a/package.json
+++ b/package.json
@@ -41,10 +41,12 @@
     "@ckeditor/ckeditor5-theme-lark": "^38.0.1",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "@faker-js/faker": "^8.0.2",
     "@mui-treasury/layout": "^5.0.0",
     "@mui-treasury/mockup": "^1.2.12",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.0",
+    "@mui/x-data-grid": "^6.5.0",
     "@reduxjs/toolkit": "^1.9.5",
     "@types/react-router-dom": "^5.3.3",
     "react": "^18.0.0",
