--- a/package.json
+++ b/package.json
@@ -50,8 +50,10 @@
     "@reduxjs/toolkit": "^1.9.5",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.4.0",
+    "gapi-script": "^1.2.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-google-login": "^5.2.2",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.2",
     "redux-saga": "^1.2.3"
