--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@typescript-eslint/eslint-plugin": "^5.59.5",
     "@typescript-eslint/parser": "^5.59.5",
     "css-loader": "^6.7.3",
+    "dotenv-webpack": "^8.0.1",
     "eslint": "^8.40.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-standard-with-typescript": "^34.0.1",
@@ -76,6 +77,7 @@
     "html-webpack-plugin": "^5.5.1",
     "lint-staged": "^13.2.2",
     "prettier": "^2.8.8",
+    "serve": "^14.2.0",
     "source-map-loader": "^4.0.1",
     "style-loader": "^3.3.2",
     "svg-inline-loader": "^0.8.2",
