--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "------",
   "main": "src/index.js",
   "scripts": {
-    "start": "webpack-dev-server --mode development --open",
+    "start": "webpack serve --mode=development",
     "build": "webpack --mode production",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "precommit": "lint-staged"
@@ -50,6 +50,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.4.0",
+    "dotenv": "^16.1.3",
     "gapi-script": "^1.2.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
