--- a/package.json
+++ b/package.json
@@ -4,10 +4,8 @@
   "description": "------",
   "main": "src/index.js",
   "scripts": {
-    "start": "webpack-dev-server --mode development --open",
-    "clean": "rm -rf ./dist",
-    "prebuild": "npm run clean",
-    "build": "webpack --config webpack.config.js --mode production",
+    "start": "webpack serve --mode=development",
+    "build": "webpack --mode production",
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
     "precommit": "lint-staged"
   },
@@ -52,6 +50,7 @@
     "@reduxjs/toolkit": "^1.9.5",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.4.0",
+    "dotenv": "^16.1.3",
     "gapi-script": "^1.2.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
