--- a/package.json
+++ b/package.json
@@ -41,18 +41,25 @@
     "@ckeditor/ckeditor5-theme-lark": "^38.0.1",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^3.1.0",
     "@mui-treasury/layout": "^5.0.0",
     "@mui-treasury/mockup": "^1.2.12",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.0",
+    "@mui/styles": "^5.13.2",
     "@reduxjs/toolkit": "^1.9.5",
+    "@tanstack/react-query": "^4.29.12",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.4.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-hook-form": "^7.44.3",
+    "react-query": "^3.39.3",
     "react-redux": "^8.0.5",
     "react-router-dom": "^6.11.2",
-    "redux-saga": "^1.2.3"
+    "react-toastify": "^9.1.3",
+    "redux-saga": "^1.2.3",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.0",
