--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "axios": "^1.4.0",
     "dotenv": "^16.1.3",
     "gapi-script": "^1.2.0",
+    "mui-file-input": "^2.0.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-google-login": "^5.2.2",
