--- a/package.json
+++ b/package.json
@@ -55,9 +55,10 @@
     "axios": "^1.4.0",
     "dotenv": "^16.1.3",
     "gapi-script": "^1.2.0",
-    "mui-file-input": "^2.0.0",
+    "material-ui-dropzone": "^3.5.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-dropzone": "^14.2.3",
     "react-google-login": "^5.2.2",
     "react-hook-form": "^7.44.3",
     "react-query": "^3.39.3",
