--- a/package.json
+++ b/package.json
@@ -51,10 +51,12 @@
     "@mui/x-data-grid": "^6.5.0",
     "@reduxjs/toolkit": "^1.9.5",
     "@tanstack/react-query": "^4.29.12",
+    "@types/lodash": "^4.14.195",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.4.0",
     "dotenv": "^16.1.3",
     "gapi-script": "^1.2.0",
+    "lodash": "^4.17.21",
     "mui-file-input": "^2.0.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
