--- a/package.json
+++ b/package.json
@@ -49,19 +49,20 @@
     "@tanstack/react-query": "^4.29.12",
     "axios": "^1.4.0",
     "dotenv": "^16.1.3",
-    "material-ui-dropzone": "^3.5.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.44.3",
+    "react-icons": "^4.9.0",
     "react-query": "^3.39.3",
     "react-router-dom": "^6.11.2",
     "react-toastify": "^9.1.3",
     "yup": "^1.2.0"
   },
   "devDependencies": {
-    "@types/react-router-dom": "^5.3.3",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
+    "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^5.59.5",
     "@typescript-eslint/parser": "^5.59.5",
     "css-loader": "^6.7.3",
