--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "------",
   "main": "src/index.js",
+  "author": {
+    "name": "Long Tran",
+    "github": "baolongt"
+  },
   "scripts": {
     "start": "webpack serve --mode=development",
     "build": "webpack --mode production",
@@ -20,7 +24,6 @@
       "pre-commit": "lint-staged"
     }
   },
-  "author": "",
   "license": "ISC",
   "dependencies": {
     "@ckeditor/ckeditor5-autoformat": "^38.0.0",
@@ -45,7 +48,6 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.0",
     "@mui/styles": "^5.13.2",
-    "@reduxjs/toolkit": "^1.9.5",
     "@tanstack/react-query": "^4.29.12",
     "axios": "^1.4.0",
     "dotenv": "^16.1.3",
@@ -56,7 +58,6 @@
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.44.3",
     "react-icons": "^4.9.0",
-    "react-query": "^3.39.3",
     "react-router-dom": "^6.11.2",
     "react-toastify": "^9.1.3",
     "yup": "^1.2.0"
