--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "axios": "^1.4.0",
     "dotenv": "^16.1.3",
     "lodash": "^4.17.21",
+    "moment": "^2.29.4",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-dropzone": "^14.2.3",
