--- a/package.json
+++ b/package.json
@@ -2,46 +2,39 @@
   "name": "capstone",
   "version": "1.0.0",
   "description": "------",
-  "main": "src/index.js",
+  "license": "ISC",
   "author": {
     "name": "Long Tran",
     "github": "baolongt"
   },
+  "main": "src/index.js",
   "scripts": {
-    "start": "webpack serve --mode=development",
-    "build": "webpack --mode production",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx",
-    "precommit": "lint-staged"
-  },
-  "lint-staged": {
-    "*.{js,jsx,ts,tsx}": [
-      "eslint --fix",
-      "git add"
-    ]
+    "build": "npm run typecheck && vite build",
+    "dev": "vite --port 3000",
+    "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 50",
+    "precommit": "lint-staged",
+    "prepare": "husky install",
+    "preview": "vite preview",
+    "serve": "npm run build && vite preview --port 3000",
+    "start": "npm run dev",
+    "typecheck": "tsc --noEmit"
   },
   "husky": {
     "hooks": {
       "pre-commit": "lint-staged"
     }
   },
-  "license": "ISC",
+  "lint-staged": {
+    "*.{css,md,json}": [
+      "prettier --write"
+    ],
+    "*.ts?(x)": [
+      "eslint",
+      "prettier --write"
+    ],
+    "package.json": "npx sort-package-json"
+  },
   "dependencies": {
-    "@ckeditor/ckeditor5-autoformat": "^38.0.0",
-    "@ckeditor/ckeditor5-basic-styles": "^38.0.0",
-    "@ckeditor/ckeditor5-build-decoupled-document": "^38.0.1",
-    "@ckeditor/ckeditor5-cloud-services": "^38.0.0",
-    "@ckeditor/ckeditor5-dev-translations": "^37.0.1",
-    "@ckeditor/ckeditor5-dev-utils": "^37.0.1",
-    "@ckeditor/ckeditor5-editor-classic": "^38.0.0",
-    "@ckeditor/ckeditor5-essentials": "^38.0.0",
-    "@ckeditor/ckeditor5-find-and-replace": "^38.0.1",
-    "@ckeditor/ckeditor5-heading": "^38.0.0",
-    "@ckeditor/ckeditor5-html-support": "^38.0.1",
-    "@ckeditor/ckeditor5-import-word": "^38.0.0",
-    "@ckeditor/ckeditor5-link": "^38.0.0",
-    "@ckeditor/ckeditor5-list": "^38.0.0",
-    "@ckeditor/ckeditor5-react": "^6.0.0",
-    "@ckeditor/ckeditor5-theme-lark": "^38.0.1",
     "@faker-js/faker": "^8.0.2",
     "@hookform/resolvers": "^3.1.0",
     "@mui-treasury/layout": "^5.0.0",
@@ -69,24 +62,25 @@
     "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^5.59.5",
     "@typescript-eslint/parser": "^5.59.5",
-    "css-loader": "^6.7.3",
+    "@vitejs/plugin-legacy": "^4.1.0",
+    "@vitejs/plugin-react": "^4.0.3",
     "eslint": "^8.40.0",
     "eslint-config-airbnb": "^19.0.4",
+    "eslint-config-prettier": "^8.8.0",
     "eslint-config-standard-with-typescript": "^34.0.1",
+    "eslint-import-resolver-typescript": "^3.5.5",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-jsx-a11y": "^6.7.1",
     "eslint-plugin-n": "^15.7.0",
+    "eslint-plugin-prettier": "^5.0.0",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "html-webpack-plugin": "^5.5.1",
+    "eslint-plugin-simple-import-sort": "^10.0.0",
     "lint-staged": "^13.2.2",
-    "prettier": "^2.8.8",
-    "style-loader": "^3.3.2",
-    "ts-loader": "^9.4.2",
+    "prettier": "^3.0.0",
+    "sort-package-json": "^2.5.1",
     "typescript": "^5.0.4",
-    "webpack": "^5.82.1",
-    "webpack-cli": "^5.1.1",
-    "webpack-dev-server": "^4.15.0"
+    "vite": "^4.4.3"
   }
 }
