--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,14 +1,26 @@
 {
   "compilerOptions": {
-    "outDir": "./build",
-    "sourceMap": true,
-    "noImplicitAny": true,
-    "module": "ES6",
-    "target": "ES6",
-    "jsx": "react",
-    "esModuleInterop": true,
+    "target": "esnext",
+    "module": "esnext",
+    "lib": ["dom", "dom.iterable", "esnext", "scripthost"],
+    "allowJs": false,
     "allowSyntheticDefaultImports": true,
-    "moduleResolution": "node"
+    "esModuleInterop": true,
+    "forceConsistentCasingInFileNames": true,
+    "isolatedModules": true,
+    "jsx": "react-jsx",
+    "moduleResolution": "Node",
+    "noEmit": true,
+    "noFallthroughCasesInSwitch": true,
+    "resolveJsonModule": true,
+    "skipLibCheck": true,
+    "strict": true,
+    "sourceMap": true,
+    "types": ["vite/client", "node"],
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"]
+    }
   },
-  "include": ["./src/**/*"]
+  "include": ["src", "vite.config.ts"]
 }
