--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@typescript-eslint/parser": "^5.59.5",
     "@vitejs/plugin-legacy": "^4.1.0",
     "@vitejs/plugin-react": "^4.0.3",
+    "@vitejs/plugin-react-refresh": "^1.3.6",
     "eslint": "^8.40.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.8.0",
