--- a/package.json
+++ b/package.json
@@ -46,19 +46,20 @@
     "dotenv": "^16.1.3",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
-    "react": "^17.0.0",
-    "react-dom": "^17.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.44.3",
     "react-icons": "^4.9.0",
     "react-router-dom": "^6.11.2",
     "react-toastify": "^9.1.3",
+    "reagraph": "^4.9.3",
     "yup": "^1.2.0"
   },
   "devDependencies": {
     "@types/lodash": "^4.14.195",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "^18.2.6",
     "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^5.59.5",
     "@typescript-eslint/parser": "^5.59.5",
@@ -78,6 +79,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-simple-import-sort": "^10.0.0",
+    "husky": "^8.0.0",
     "lint-staged": "^13.2.2",
     "prettier": "^3.0.0",
     "sort-package-json": "^2.5.1",
