--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   "main": "src/index.js",
   "scripts": {
     "build": "npm run typecheck && vite build",
+    "cleanup": "rm -rf node_modules && rm -rf package-lock.json",
     "dev": "vite --port 3000",
     "lint": "eslint src --ext ts,tsx --report-unused-disable-directives --max-warnings 50",
+    "lint:fix": "npm run lint -- --fix",
     "precommit": "lint-staged",
     "prepare": "husky install",
     "preview": "vite preview",
@@ -25,12 +27,8 @@
     }
   },
   "lint-staged": {
-    "*.{css,md,json}": [
-      "prettier --write"
-    ],
     "*.ts?(x)": [
-      "eslint --fix",
-      "prettier --write"
+      "npm run lint:fix"
     ],
     "package.json": "npx sort-package-json"
   },
