--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
   },
   "lint-staged": {
     "*.ts?(x)": [
-      "npm run lint:fix"
+      "npm run lint:fix",
+      "git add"
     ],
     "package.json": "npx sort-package-json"
   },
