--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.0",
     "@tanstack/react-query": "^4.29.12",
+    "@tanstack/react-table": "^8.9.3",
     "axios": "^1.4.0",
     "dotenv": "^16.1.3",
     "lodash": "^4.17.21",
