--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "react-router-dom": "^6.11.2",
     "react-toastify": "^9.1.3",
     "reagraph": "^4.9.3",
+    "uuid": "^9.0.0",
     "yup": "^1.2.0"
   },
   "devDependencies": {
@@ -66,6 +67,7 @@
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "@types/react-router-dom": "^5.3.3",
+    "@types/uuid": "^9.0.2",
     "@typescript-eslint/eslint-plugin": "^5.59.5",
     "@typescript-eslint/parser": "^5.59.5",
     "@vitejs/plugin-legacy": "^4.1.0",
