--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@hookform/resolvers": "^3.1.0",
     "@mui-treasury/layout": "^5.0.0",
     "@mui/icons-material": "^5.11.16",
+    "@mui/lab": "^5.0.0-alpha.138",
     "@mui/material": "^5.13.0",
     "@tanstack/react-query": "^4.29.12",
     "@tanstack/react-table": "^8.9.3",
