--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "@hookform/resolvers": "^3.1.0",
     "@mui-treasury/layout": "^5.0.0",
     "@mui/icons-material": "^5.11.16",
+    "@mui/lab": "^5.0.0-alpha.138",
     "@mui/material": "^5.13.0",
     "@tanstack/react-query": "^4.29.12",
     "@tanstack/react-table": "^8.9.3",
@@ -58,6 +59,7 @@
     "react-router-dom": "^6.11.2",
     "react-toastify": "^9.1.3",
     "reagraph": "^4.9.3",
+    "uuid": "^9.0.0",
     "yup": "^1.2.0"
   },
   "devDependencies": {
@@ -66,6 +68,7 @@
     "@types/react": "^18.2.14",
     "@types/react-dom": "^18.2.6",
     "@types/react-router-dom": "^5.3.3",
+    "@types/uuid": "^9.0.2",
     "@typescript-eslint/eslint-plugin": "^5.59.5",
     "@typescript-eslint/parser": "^5.59.5",
     "@vitejs/plugin-legacy": "^4.1.0",
