--- a/package.json
+++ b/package.json
@@ -37,14 +37,14 @@
     "package.json": "npx sort-package-json"
   },
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
     "@faker-js/faker": "^8.0.2",
     "@hookform/resolvers": "^3.1.0",
     "@mui-treasury/layout": "^5.0.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/lab": "^5.0.0-alpha.138",
     "@mui/material": "^5.13.0",
+    "@mui/x-date-pickers": "^6.12.0",
+    "@mui/x-date-pickers-pro": "^6.12.0",
     "@tanstack/react-query": "^4.29.12",
     "@tanstack/react-table": "^8.9.3",
     "axios": "^1.4.0",
@@ -74,6 +74,7 @@
     "@vitejs/plugin-legacy": "^4.1.0",
     "@vitejs/plugin-react": "^4.0.3",
     "@vitejs/plugin-react-refresh": "^1.3.6",
+    "dayjs": "^1.11.9",
     "eslint": "^8.40.0",
     "eslint-config-airbnb": "^19.0.4",
     "eslint-config-prettier": "^8.8.0",
