--- a/package.json
+++ b/package.json
@@ -31,8 +31,7 @@
   },
   "lint-staged": {
     "*.ts?(x)": [
-      "npm run lint:fix",
-      "git add"
+      "npm run lint:fix"
     ],
     "package.json": "npx sort-package-json"
   },
