--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "package.json": "npx sort-package-json"
   },
   "dependencies": {
+    "@cyntler/react-doc-viewer": "^1.13.0",
     "@faker-js/faker": "^8.0.2",
     "@hookform/resolvers": "^3.1.0",
     "@mui-treasury/layout": "^5.0.0",
