--- a/package.json
+++ b/package.json
@@ -53,14 +53,16 @@
     "dotenv": "^16.1.3",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
+    "pdf-lib": "^1.17.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.6",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.44.3",
     "react-icons": "^4.9.0",
+    "react-pdf": "^7.5.0",
     "react-router-dom": "^6.11.2",
     "react-toastify": "^9.1.3",
-    "reagraph": "^4.9.3",
     "uuid": "^9.0.0",
     "yup": "^1.2.0"
   },
