--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-VITE_API_URL='https://dmscapstonebe.azurewebsites.net/'
+REACT_APP_CLIENT_ID=964935534460-2hm07mf427skqk3hfpre4th57vbkfob3.apps.googleusercontent.com
+REACT_APP_API_KEY=AIzaSyAig2vfxwoMb7SLoxOr56tWcYFQzDs3LeA
+REACT_APP_SCOPES=https://www.googleapis.com/auth/drive
