--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "pdf-lib": "^1.17.1",
     "query-string": "^8.1.0",
     "react": "^18.2.0",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-draggable": "^4.4.6",
     "react-dropzone": "^14.2.3",
@@ -71,6 +72,7 @@
     "@types/lodash": "^4.14.196",
     "@types/node": "^20.4.2",
     "@types/react": "^18.2.14",
+    "@types/react-beautiful-dnd": "^13.1.6",
     "@types/react-dom": "^18.2.6",
     "@types/react-router-dom": "^5.3.3",
     "@types/uuid": "^9.0.2",
