--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "@tanstack/react-query": "^4.29.12",
     "@tanstack/react-table": "^8.9.3",
     "axios": "^1.4.0",
+    "dagre": "^0.8.5",
     "dotenv": "^16.1.3",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
@@ -65,10 +66,12 @@
     "react-pdf": "^7.5.0",
     "react-router-dom": "^6.11.2",
     "react-toastify": "^9.1.3",
+    "reactflow": "^11.9.4",
     "uuid": "^9.0.0",
     "yup": "^1.2.0"
   },
   "devDependencies": {
+    "@types/dagre": "^0.7.52",
     "@types/lodash": "^4.14.196",
     "@types/node": "^20.4.2",
     "@types/react": "^18.2.14",
