--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "@mui/x-date-pickers-pro": "^6.12.0",
     "@tanstack/react-query": "^4.29.12",
     "@tanstack/react-table": "^8.9.3",
+    "@ungap/url-search-params": "^0.2.2",
     "axios": "^1.4.0",
     "dagre": "^0.8.5",
     "dotenv": "^16.1.3",
