--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "react-hook-form": "^7.44.3",
     "react-icons": "^4.9.0",
     "react-pdf": "^7.5.0",
+    "react-quill": "^2.0.0",
     "react-router-dom": "^6.11.2",
     "react-toastify": "^9.1.3",
     "reactflow": "^11.9.4",
