--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "axios": "^1.4.0",
     "dagre": "^0.8.5",
     "dotenv": "^16.1.3",
+    "firebase": "^10.6.0",
     "lodash": "^4.17.21",
     "moment": "^2.29.4",
     "pdf-lib": "^1.17.1",
