--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,5 +22,5 @@
       "@/*": ["src/*"]
     }
   },
-  "include": ["src", "vite.config.ts"]
+  "include": ["src", "vite.config.ts", "firebase-messaging-sw.js"]
 }
