--- a/tsconfig.eslint.json
+++ b/tsconfig.eslint.json
@@ -5,5 +5,5 @@
     "noEmit": true
   },
   "include": ["src", "vite.config.ts"],
-  "exclude": ["node_modules", "**/dist"]
+  "exclude": ["node_modules", "**/dist", "./public/firebase-messaging-sw.js"]
 }
