--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-VITE_API_URL=https://dmscapstonebe.azurewebsites.net/
-# VITE_API_URL=https://localhost:5001/
+# VITE_API_URL=https://dmscapstonebe.azurewebsites.net/
+VITE_API_URL=https://localhost:5001/
 
