--- a/package.json
+++ b/package.json
@@ -106,6 +106,7 @@
     "prettier": "^3.0.0",
     "sort-package-json": "^2.5.1",
     "typescript": "^5.1.6",
-    "vite": "^4.4.3"
+    "vite": "^4.4.3",
+    "web-worker": "^1.2.0"
   }
 }
