--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "@mui/icons-material": "^5.11.16",
     "@mui/lab": "^5.0.0-alpha.138",
     "@mui/material": "^5.13.0",
-    "@mui/x-charts": "^6.0.0-alpha.11",
+    "@mui/x-charts": "^6.18.7",
     "@mui/x-date-pickers": "^6.12.0",
     "@mui/x-date-pickers-pro": "^6.12.0",
     "@tanstack/react-query": "^4.29.12",
